@@ -14,6 +14,9 @@
 
 2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/accidental-engraver.cc (acknowledge_rhythmic_head): also
+	catch trill-span-event notes.
+
 	* Documentation/user/examples.itely (Ancient notation templates): typo.
 	(Jazz combo): typo.
 
